--- a/Titanic_analysis.ipynb
+++ b/Titanic_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "537eb85d-b6f1-46e7-87de-15141ca251f4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "1b6ca26d-da73-4021-acfe-e15acba36ec8",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "7300092a-5a74-41b4-abbd-397207c9fe92",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "5                0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "3a458b82-27ca-45d7-b744-e6fbc268aa42",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "891            male  32.0      0      0      370376   7.75   NaN        Q  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "5a7fa132-3013-4800-90f3-5972795c45b2",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "ab72a769-8bd4-4094-b742-4a3058d60294",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "8e3ea7b7-7a7b-4319-97f2-fa51fb9ca460",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "852          74.0      0      0      347060   7.7750   NaN        S  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "0138126d-96fc-46c7-99b8-0c15251a2268",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
        "Name: 332, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "99319753-dee1-4d26-8c81-2d0639ec623a",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "Name: 333, dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "02946fab-ca3f-4c91-b2dd-5b5252b14086",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "335              1      0  PC 17611  133.6500   NaN        S  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "14247173-f01c-421f-b1d3-6834abbab0af",
    "metadata": {},
    "outputs": [],
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "7cf75552-26d8-4117-90db-aca6798fd0a5",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "04c4123e-25eb-42ce-a5c2-2626208c28e0",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
        "Name: Survived, Length: 714, dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "565469ee-4d59-4b0e-8672-91265507656b",
    "metadata": {},
    "outputs": [],
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "id": "b373e58e-33ce-4a8c-83a0-afe81a69b29e",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
        "Name: Age, Length: 714, dtype: float64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 42,
    "id": "d6a6765a-a746-49ed-8c2b-2e8d01dd96a2",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "id": "d8d78cd1-3119-4b8f-8e81-fc33a5a08168",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
        "Name: Age, Length: 535, dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "id": "a9d55666-81da-4b02-aea6-209933d90a00",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
        "Name: Age, Length: 179, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "148e453c-566d-4c96-a9aa-40a6bf0ccec8",
    "metadata": {},
    "outputs": [],
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "id": "92ed6ac8-40bc-4758-afcf-dbec32c57f1c",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
        "Name: Age, Length: 714, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "id": "7f057ffb-d076-446e-ac6b-c83f27bf2f9e",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "85c618c8-dc2c-4848-938c-3c1ab13f869a",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1639,7 @@
        "[714 rows x 11 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,8 +1650,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9cc8736e-c3de-4f65-9547-4531d654a801",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    714.000000\n",
+       "mean      29.699118\n",
+       "std       14.526497\n",
+       "min        0.420000\n",
+       "25%       20.125000\n",
+       "50%       28.000000\n",
+       "75%       38.000000\n",
+       "max       80.000000\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "23a15937-f47c-41a9-ac45-a56c825faebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "cc5e8f5b-fd06-4af5-91db-df6aa170ccf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e587f901-a9c5-4b14-ba4d-f2ec8ec97bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=tita['Age'].to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d270e07c-146b-4267-a04d-1297d3f29960",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId\n",
+       "813    0\n",
+       "449    1\n",
+       "658    0\n",
+       "312    1\n",
+       "431    1\n",
+       "      ..\n",
+       "93     0\n",
+       "135    0\n",
+       "338    1\n",
+       "549    0\n",
+       "131    0\n",
+       "Name: Survived, Length: 535, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "b35cf196-9e11-4694-a47d-4d56b773bd3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "32722c8b-22b5-4e64-b727-cc6734f4fd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=20)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "d70ee45a-6381-42ee-9562-72dd4ddfe5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predtrain =knn.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4cb9b49b-32de-4c44-8e81-8dd0751e1796",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3644859813084112"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(y_predtrain-y_train).sum() /len(y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "deb26525-edff-44cc-85d4-7e8fcadd6a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "cac03ddf-0940-4345-a9a6-2a06164c7918",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37988826815642457"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(y_pred-y_test).sum()/len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "5191fb58-4ef6-48b3-b752-c2e55a49d777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xi=pd.DataFrame([n for n in range(100)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "970528d8-64fd-4a1a-830b-57a763637614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0\n",
+       "0    0\n",
+       "1    1\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "..  ..\n",
+       "95  95\n",
+       "96  96\n",
+       "97  97\n",
+       "98  98\n",
+       "99  99\n",
+       "\n",
+       "[100 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b48c12c5-1e79-4dc6-a841-a1d429177771",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn.predict(Xi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a764e0a4-a650-4b5b-a6f6-1e2faac5c5b3",
    "metadata": {},
    "outputs": [],
    "source": []
