--- a/Koerdt_Titanic/ErstesMLProject.ipynb
+++ b/Koerdt_Titanic/ErstesMLProject.ipynb
@@ -302,6 +302,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -874,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
